integração pt1